[gd_scene load_steps=7 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://VolumeSlider.gd" type="Script" id=2]
[ext_resource path="res://FontData.tres" type="Theme" id=3]
[ext_resource path="res://notok.png" type="Texture" id=4]
[ext_resource path="res://goal.png" type="Texture" id=5]
[ext_resource path="res://ok.png" type="Texture" id=6]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( 6.10352e-05, 0 )
scale = Vector2( 1, 1 )
color = Color( 0.0627451, 0.0627451, 0.0627451, 1 )
polygon = PoolVector2Array( -16, -16, -16, 616, 1040, 616, 1040, -16 )

[node name="Place1" type="Position2D" parent="."]
position = Vector2( 192, 386 )

[node name="Place2" type="Position2D" parent="."]
position = Vector2( 320, 386 )

[node name="Place3" type="Position2D" parent="."]
position = Vector2( 448, 386 )

[node name="Place4" type="Position2D" parent="."]
position = Vector2( 576, 386 )

[node name="Place5" type="Position2D" parent="."]
position = Vector2( 704, 386 )

[node name="Place6" type="Position2D" parent="."]
position = Vector2( 832, 386 )

[node name="VolumeSlider" type="HSlider" parent="."]
margin_left = 688.0
margin_top = 560.0
margin_right = 1000.0
margin_bottom = 576.0
script = ExtResource( 2 )

[node name="Label" type="Label" parent="VolumeSlider"]
margin_top = -24.0
margin_right = 137.0
margin_bottom = 37.0
theme = ExtResource( 3 )
text = "Music"

[node name="ButtonReload" type="Button" parent="."]
margin_left = 16.0
margin_top = 552.0
margin_right = 71.0
margin_bottom = 572.0
theme = ExtResource( 3 )
text = "Reload"

[node name="Rules" type="Button" parent="."]
margin_left = 112.0
margin_top = 552.0
margin_right = 189.0
margin_bottom = 583.0
theme = ExtResource( 3 )
text = "Rules"

[node name="Exit" type="Button" parent="."]
margin_left = 208.0
margin_top = 552.0
margin_right = 285.0
margin_bottom = 583.0
theme = ExtResource( 3 )
text = "Exit"

[node name="RulesWindow" type="WindowDialog" parent="."]
margin_left = 128.0
margin_top = 64.0
margin_right = 896.0
margin_bottom = 512.0
theme = ExtResource( 3 )
window_title = "Rules"

[node name="Sprite" type="Sprite" parent="RulesWindow"]
position = Vector2( 576, 112 )
scale = Vector2( 0.291469, 0.291469 )
texture = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="RulesWindow"]
position = Vector2( 296, 320 )
scale = Vector2( 0.377395, 0.377395 )
texture = ExtResource( 6 )

[node name="Sprite3" type="Sprite" parent="RulesWindow"]
position = Vector2( 616, 322 )
scale = Vector2( 0.376448, 0.376448 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="RulesWindow"]
margin_left = 40.0
margin_top = 88.0
margin_right = 412.0
margin_bottom = 141.0
theme = ExtResource( 3 )
text = "Your goal is to put all balls of the same
color in one vial."

[node name="Label2" type="Label" parent="RulesWindow"]
margin_left = 24.0
margin_top = 264.0
margin_right = 219.0
margin_bottom = 373.0
theme = ExtResource( 3 )
text = "You can put balls 
on top of each other 
only when they are 
the same color."

[node name="Label3" type="Label" parent="RulesWindow"]
margin_left = 384.0
margin_top = 296.0
margin_right = 552.0
margin_bottom = 349.0
theme = ExtResource( 3 )
text = "But not the other 
way around."

[node name="FinishedDialog" type="AcceptDialog" parent="."]
pause_mode = 2
margin_left = 320.0
margin_top = 192.0
margin_right = 704.0
margin_bottom = 352.0
theme = ExtResource( 3 )
window_title = "Good job!"
dialog_text = "You did it!"

[connection signal="mouse_exited" from="VolumeSlider" to="VolumeSlider" method="_on_VolumeSlider_mouse_exited"]
[connection signal="value_changed" from="VolumeSlider" to="VolumeSlider" method="_on_VolumeSlider_value_changed"]
[connection signal="pressed" from="ButtonReload" to="." method="_on_ButtonReload_pressed"]
[connection signal="pressed" from="Rules" to="." method="_on_Rules_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="confirmed" from="FinishedDialog" to="." method="_on_FinishedDialog_confirmed"]
